// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renderCustomToolbar should render correctly for smaller screens 1`] = `
<React.Fragment>
  <EuiFlexGroup
    alignItems="center"
    className="unifiedDataTableToolbar"
    data-test-subj="unifiedDataTableToolbar"
    gutterSize="s"
    justifyContent="spaceBetween"
    responsive={false}
    wrap={true}
  >
    <EuiFlexItem
      grow={false}
    >
      <EuiFlexGroup
        alignItems="center"
        gutterSize="s"
        responsive={false}
      />
    </EuiFlexItem>
    <EuiFlexItem
      grow={false}
    >
      <EuiFlexGroup
        alignItems="center"
        gutterSize="s"
        responsive={false}
      >
        <EuiFlexItem
          grow={false}
        >
          <div
            className="unifiedDataTableToolbarControlGroup"
          >
            <div
              className="unifiedDataTableToolbarControlIconButton"
            >
              keyboard
            </div>
            <div
              className="unifiedDataTableToolbarControlIconButton"
            >
              display
            </div>
            <div
              className="unifiedDataTableToolbarControlIconButton"
            >
              fullScreen
            </div>
          </div>
        </EuiFlexItem>
      </EuiFlexGroup>
    </EuiFlexItem>
  </EuiFlexGroup>
</React.Fragment>
`;

exports[`renderCustomToolbar should render correctly with an element 1`] = `
<React.Fragment>
  <EuiFlexGroup
    alignItems="center"
    className="unifiedDataTableToolbar"
    data-test-subj="unifiedDataTableToolbar"
    gutterSize="s"
    justifyContent="spaceBetween"
    responsive={false}
    wrap={true}
  >
    <EuiFlexItem
      grow={false}
    >
      <div>
        left
      </div>
    </EuiFlexItem>
    <EuiFlexItem
      grow={false}
    >
      <EuiFlexGroup
        alignItems="center"
        gutterSize="s"
        responsive={false}
      >
        <React.Fragment>
          <EuiFlexItem
            grow={false}
          >
            <div>
              additional
            </div>
          </EuiFlexItem>
          <EuiFlexItem
            grow={false}
          >
            <div
              className="unifiedDataTableToolbarControlButton"
            >
              column
            </div>
          </EuiFlexItem>
          <EuiFlexItem
            grow={false}
          >
            <div
              className="unifiedDataTableToolbarControlButton"
            >
              columnSorting
            </div>
          </EuiFlexItem>
        </React.Fragment>
        <EuiFlexItem
          grow={false}
        >
          <div
            className="unifiedDataTableToolbarControlGroup"
          >
            <div
              className="unifiedDataTableToolbarControlIconButton"
            >
              keyboard
            </div>
            <div
              className="unifiedDataTableToolbarControlIconButton"
            >
              display
            </div>
            <div
              className="unifiedDataTableToolbarControlIconButton"
            >
              fullScreen
            </div>
          </div>
        </EuiFlexItem>
      </EuiFlexGroup>
    </EuiFlexItem>
  </EuiFlexGroup>
  <div
    className="unifiedDataTableToolbarBottom"
    data-test-subj="unifiedDataTableToolbarBottom"
  >
    <div>
      bottom
    </div>
  </div>
</React.Fragment>
`;

exports[`renderCustomToolbar should render successfully 1`] = `
<React.Fragment>
  <EuiFlexGroup
    alignItems="center"
    className="unifiedDataTableToolbar"
    data-test-subj="unifiedDataTableToolbar"
    gutterSize="s"
    justifyContent="spaceBetween"
    responsive={false}
    wrap={true}
  >
    <EuiFlexItem
      grow={false}
    >
      <EuiFlexGroup
        alignItems="center"
        gutterSize="s"
        responsive={false}
      >
        <React.Fragment>
          <EuiFlexItem
            grow={false}
          >
            <div
              className="unifiedDataTableToolbarControlButton"
            >
              column
            </div>
          </EuiFlexItem>
          <EuiFlexItem
            grow={false}
          >
            <div
              className="unifiedDataTableToolbarControlButton"
            >
              columnSorting
            </div>
          </EuiFlexItem>
          <EuiFlexItem
            grow={false}
          >
            <div>
              additional
            </div>
          </EuiFlexItem>
        </React.Fragment>
      </EuiFlexGroup>
    </EuiFlexItem>
    <EuiFlexItem
      grow={false}
    >
      <EuiFlexGroup
        alignItems="center"
        gutterSize="s"
        responsive={false}
      >
        <EuiFlexItem
          grow={false}
        >
          <div
            className="unifiedDataTableToolbarControlGroup"
          >
            <div
              className="unifiedDataTableToolbarControlIconButton"
            >
              keyboard
            </div>
            <div
              className="unifiedDataTableToolbarControlIconButton"
            >
              display
            </div>
            <div
              className="unifiedDataTableToolbarControlIconButton"
            >
              fullScreen
            </div>
          </div>
        </EuiFlexItem>
      </EuiFlexGroup>
    </EuiFlexItem>
  </EuiFlexGroup>
</React.Fragment>
`;
